--- a/evilgrow-theme/style.css
+++ b/evilgrow-theme/style.css
@@ -12,6 +12,7 @@ Template: astra
 
 @import url("assets/css/icons.css");
 @import url("assets/css/header.css");
+@import url("assets/css/login.css");
 
 #page{
     position: relative;
@@ -27,7 +28,6 @@ Template: astra
 a:focus{
     outline: none;
 }
-
 
 
 
