--- a/evilgrow-theme/assets/css/header.css
+++ b/evilgrow-theme/assets/css/header.css
@@ -25,3 +25,9 @@
 .main-header-menu .menu-item:hover > .menu-link, .main-header-menu .menu-item .sub-menu .menu-link{
     color: black !important;
 }
+
+
+
+nav > .icon{
+    
+}
