--- a/evilgrow-theme/assets/css/header.css
+++ b/evilgrow-theme/assets/css/header.css
@@ -1,10 +1,15 @@
 #masthead{
     height: 150px !important;
 }
-.site-primary-header-wrap{
-    top: 50%;
-    position: relative;
-    transform: translateY(-50%)
+@media (min-width: 922px) {
+    .site-primary-header-wrap{
+        top: 50%;
+        position: relative;
+        transform: translateY(-50%)
+    } 
+}
+.ast-mobile-popup-drawer.active .ast-mobile-popup-inner{
+    max-width: 400px;
 }
 .ast-primary-header-bar{
     height: 150px !important;
