--- a/evilgrow-theme/style.css
+++ b/evilgrow-theme/style.css
@@ -20,7 +20,7 @@ body{
 }
 h1, h2, h3, h4, h5, h6{
     font-family: Poppins !important;
-    font-weight: bold !important;
+    font-weight: normal !important;
 }
 
 
